--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,3 +15,20 @@ html {
   font-size: 10px;
   /* font-family: "Inter"; */
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.slick-list {
+  height: 38rem;
+}
+.slick-initialized .slick-slide {
+  display: flex;
+  justify-content: center;
+}
